Add 개발환경 세팅 #2 * header component 추가

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -16,8 +16,15 @@ html {
 }
 
 body {
-  font-family: 'Pretendard Variable', -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo', 'Malgun Gothic',
-  '맑은 고딕', arial, sans-serif;
+  font-family:
+    'Pretendard Variable',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Apple SD Gothic Neo',
+    'Malgun Gothic',
+    '맑은 고딕',
+    arial,
+    sans-serif;
   background-color: #fff;
   color: #000;
   line-height: 1;
